--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="AI-Driven Diet Planning - Transform your nutrition journey" />
+    <meta name="theme-color" content="#000000" />
     <title>Diet Plan Generator</title>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg">
   </head>
   <body>
     <div id="root"></div>
