--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="AI-Driven Diet Planning - Transform your nutrition journey" />
     <meta name="theme-color" content="#000000" />
     <title>Diet Plan Generator</title>
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg">
+    <link rel="icon" type="image/svg+xml" href="/images/logo.svg">
   </head>
   <body>
     <div id="root"></div>
